[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FROGlib"
version = "0.1.0"
description = "Hardware Abstraction and Utility Library for FROG 3160"
authors = [{ name = "FROG 3160", email = "your-email@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "robotpy>=2026.2.2",
    "robotpy-commands-v2>=2026.2.2",
    "phoenix6>26.0.0",
    "photonlibpy>2026.1.1",
    "numpy",
]
[project.urls]
Homepage = "https://github.com/FROG3160/FROGlib"
